Fixing how team section looks on tablets and mobile

--- a/src/assets/sass/layout/_team.scss
+++ b/src/assets/sass/layout/_team.scss
@@ -114,3 +114,25 @@
     }
   }
 }
+
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+  ##Screen = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .teams-wrap {
+    flex-wrap: wrap;
+  }
+}
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .teams-wrap {
+    flex-wrap: wrap;
+  }
+}
